# College-Pass-Manager-KMIT

./: .gitignore  README.md
.github/workflows/: ci.yaml
client/: build-exe.py  gethistory.py  getlatecomers.py  main.py  requirements.txt  setlunchtime.py  srvrcfg.py
client/res/: design.ui
scanner/: .gitignore  pubspec.yaml
scanner/lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  db_handling.dart  main.dart  secrets.dart  utlis.dart
scanner/macos/Runner/: bridge_generated.h
scanner/native/: Cargo.toml
scanner/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
scanner/test/: widget_test.dart
server/: .dockerignore  .env  .gitignore  Dockerblank  Dockerfile  Dockerfile2  Dockerfile3  README.md  bun.lockb  init.sh  package.json  tsconfig.json
server/db/: Cargo.toml
server/db_connector/: Cargo.toml
server/db_connector/migrations/2023-09-01-162342_add_mentors/: up.sql
server/db_connector/src/: lib.rs  models.rs  schema.rs
server/encryption/src/: lib.rs
server/src/: api.ts  db_connector.ts  index.ts  lib_encryption.ts  testing.ts  types.ts  utlis.ts
server/src/__tests__/: encryption.test.ts  server.test.ts
server/src/encryption/: Cargo.toml
server/src/encryption/src/: lib.rs
server2/: .gitignore  Cargo.toml
server2/db_connector/: .env
server2/db_connector/migrations/2023-09-01-162342_add_mentors/: down.sql  up.sql
server2/db_connector/src/: lib.rs  schema.rs
server2/encryption/: Cargo.toml
server2/encryption/src/: lib.rs
(+2 files in other folders)
