[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib","cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = ["x86_64-linux-android", "i686-linux-android", "armv7-linux-androideabi", "aarch64-linux-android"]

[dependencies]
flutter_rust_bridge = "1.82.1"
base64 = "0.21.3"
anyhow = "1.0.75"
openssl = { version = "0.10.57" }
