[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

[lib]
name = "encryption"
crate-type = ["rlib","dylib"]

[dependencies]
base64 = "0.21.3"
openssl = { version = "0.10.57", features = ["vendored"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
